--- a/src/cli.yml
+++ b/src/cli.yml
@@ -6,6 +6,6 @@ args:
   - all:
       short: a
       long: all
-  - day1:
-      short: "1"
-      long: day1
+  - day1_1:
+      short: 1_1
+      long: day1_1
