Wrong solution to day1_2

--- a/src/cli.yml
+++ b/src/cli.yml
@@ -7,5 +7,102 @@ args:
       short: a
       long: all
   - day1_1:
-      short: 1_1
       long: day1_1
+  - day1_2:
+      long: day1_2
+  - day2_1:
+      long: day2_1
+  - day2_2:
+      long: day2_2
+  - day3_1:
+      long: day3_1
+  - day3_2:
+      long: day3_2
+  - day4_1:
+      long: day4_1
+  - day4_2:
+      long: day4_2
+  - day5_1:
+      long: day5_1
+  - day5_2:
+      long: day5_2
+  - day6_1:
+      long: day6_1
+  - day6_2:
+      long: day6_2
+  - day7_1:
+      long: day7_1
+  - day7_2:
+      long: day7_2
+  - day8_1:
+      long: day8_1
+  - day8_2:
+      long: day8_2
+  - day9_1:
+      long: day9_1
+  - day9_2:
+      long: day9_2
+  - day10_1:
+      long: day10_1
+  - day10_2:
+      long: day10_2
+  - day11_1:
+      long: day11_1
+  - day11_2:
+      long: day11_2
+  - day12_1:
+      long: day12_1
+  - day12_2:
+      long: day12_2
+  - day13_1:
+      long: day13_1
+  - day13_2:
+      long: day13_2
+  - day14_1:
+      long: day14_1
+  - day14_2:
+      long: day14_2
+  - day15_1:
+      long: day15_1
+  - day15_2:
+      long: day15_2
+  - day16_1:
+      long: day16_1
+  - day16_2:
+      long: day16_2
+  - day17_1:
+      long: day17_1
+  - day17_2:
+      long: day17_2
+  - day18_1:
+      long: day18_1
+  - day18_2:
+      long: day18_2
+  - day19_1:
+      long: day19_1
+  - day19_2:
+      long: day19_2
+  - day20_1:
+      long: day20_1
+  - day20_2:
+      long: day20_2
+  - day21_1:
+      long: day21_1
+  - day21_2:
+      long: day21_2
+  - day22_1:
+      long: day22_1
+  - day22_2:
+      long: day22_2
+  - day23_1:
+      long: day23_1
+  - day23_2:
+      long: day23_2
+  - day24_1:
+      long: day24_1
+  - day24_2:
+      long: day24_2
+  - day25_1:
+      long: day25_1
+  - day25_2:
+      long: day25_2
